--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.font-1 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.font-2 {
+  font-family: 'Varela Round', sans-serif;
+}
+
+.font-3 {
+  font-family: 'Roboto', sans-serif;
+}
+
+.font-4 {
+  font-family: 'Zen Kaku Gothic Antique', sans-serif;
+}
+
+.centered {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
